Updated fader.php to display "Network News Down" (l_news_down) when unable to access the database and more checks.
Added l_news_down to each of the language files, translated using Google Translate (needs checking).
Updated fader.php to only display as link when we have news.
Added a switch to display the users password upon signup.
Moved l_new_pwis to its correct category.

TheKabal (2 September 2012)
--------------------------------------
Adminlog() is now admin_log
Playerlog() is now player_log
Switched index and report to template driven versions.
Renamed a number of functions (gen_score, get_avg_tech) to be more consistent with other functions (calc_score, calc_avg_tech).
Added compression and encryption to the session table, which means that admins cannot view data inside a player session.
Cleaned up the direct-test error handling to be more consistent, and also added its test on several files that did not have it.
Simplified the config files further, including removing commented out code.
Created some new language strings for text that was in footer

TheMightyDude (29 August 2012)
--------------------------------------
Added strlen and gettype functionality to Smarty.
Added a more compliant way to check for clients that require XML output, uses HTTP_ACCEPT.

TheKabal (25 August 2012)
--------------------------------------
Passwords are now salted & stored using bcrypt
Split combat and IGB into seperate function files
Cleaned up many CamelCaps and ALLCAPS function names
All authentication now uses sessions instead of cookies
check_login now performs both the checking of login/authentication, but also updates the session (like update_cookie used to do)
Main menu now includes an admin menu link if you are logged in with the adminmail account
Main menu now includes a clickable link for score, which allows a player to trigger the function
connect_database is now only called from common
global $db is now only called inside connect_database
